Add title and some context

--- a/examples/typeof-operator.html
+++ b/examples/typeof-operator.html
@@ -2,10 +2,12 @@
 
 <html>
   <head>
-    <title></title>
+    <title>typeof operator examples</title>
   </head>
 
   <body>
+    <p>Go to console to see the output.</p>
+
     <script type="text/javascript">
       // use console.log(String) to print informaton
       var chrome;
